  * Refresh patches for changes upstream:
    - default_directories
    - allow_no_tuners
    - configure_mythplugins_without_mythtv
  * Install new HTML configuration content with mythbackend.
  * Install new backend configuration content with mythbackend.
  * Add build-deps on python-urlgrabber.
  * Install mythmediaserver into mythtv-common

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 08 Feb 2011 10:50:52 -0600

mythtv (2:0.24.0+fixes.20110416.9ba3ece-0ubuntu2) UNRELEASED; urgency=low

  * debian/mythtv.make:
    - Only parse the line if it *starts* with Version
  * Don't destroy VERSION in between runs, make sure to restore it to what
    was there before starting each time.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 17 May 2011 15:26:01 -0500

mythtv (2:0.24.0+fixes.20110416.9ba3ece-0ubuntu1) natty; urgency=low

  * New upstream checkout (9ba3ece)
  * >>Upstream changes since last upload (2a9d9f5):
  * [9ba3ece] Fixed update of some recording status transitions.
  * [f6e282f] RSS Parsing: Check player tags to make sure they don't
    have child elements.
  * [c1c7af0] Filter out NULL-characters from EIT before we save the
    data in the database.
  * [1cfcb2b] Internet Content: Correct Blip.tv API URL.
  * [4068639] libmythtv: Use the actual MythPlayer pause state
  * Disable jamu and mirobridge bindings as they're current broke with
    0.24 and won't be fixed in time for release.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Sat, 16 Apr 2011 02:14:52 -0500

mythtv (2:0.24.0+fixes.20110410.2a9d9f5-0ubuntu3) natty; urgency=low

  * debian/mythtv.make:
    - Properly generate the VCS fields depending on fixes/master.
  * debian/control.in:
    - Drop recommends on mythtv-themes to fix oversized AMD64 disk.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 12 Apr 2011 23:56:18 -0500

mythtv (2:0.24.0+fixes.20110410.2a9d9f5-0ubuntu2) natty; urgency=low
