@@ -16,3 +16,12 @@
         missingok
 }
 
+/var/log/mythtv/jamu.log {
+        daily
+	size=10M
+        rotate 7
+        notifempty
+        copytruncate
+        missingok
+}
+
