@@ -1,2 +1,0 @@
-mythplugins/mythvideo/README.dvd
-mythplugins/mythvideo/README-database.dvd
