@@ -1,4 +1,0 @@
-#Disable jamu/mirobridge since they're not set up
-#to work with 0.24 bindings yet.
-#debian/mcc-jamu/python	usr/share/mythbuntu/plugins
-#debian/mcc-jamu/ui	usr/share/mythbuntu/plugins
