@@ -1,51 +1,0 @@
-#!/bin/sh
-
-set -e
-
-# summary of how this script can be called:
-#        * <postinst> `configure' <most-recently-configured-version>
-#        * <old-postinst> `abort-upgrade' <new version>
-#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
-#          <new-version>
-#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
-#          <failed-install-package> <version> `removing'
-#          <conflicting-package> <version>
-
-case "$1" in
-    configure)
-        for dir in /var/lib/mythdvd /var/lib/mythdvd/temp; do
-            if ! dpkg-statoverride --list $dir >/dev/null; then
-                chown mythtv:mythtv $dir || true
-                chmod 2775 $dir || true
-            fi
-        done
-
-        HOMEDIR=$(getent passwd mythtv | awk -F: '{ print $6 }')
-        mkdir -p $HOMEDIR/.mythtv || true
-        chown mythtv:mythtv $HOMEDIR/.mythtv || true
-        if [ ! -f $HOMEDIR/.mythtv/jamu.conf ]; then
-            cp /usr/share/mythtv/mythvideo/scripts/jamu-example.conf $HOMEDIR/.mythtv/jamu.conf
-            chown mythtv:mythtv $HOMEDIR/.mythtv/jamu.conf
-        fi
-
-
-        ;;
-
-    abort-upgrade|abort-remove|abort-deconfigure)
-
-        ;;
-
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-        ;;
-esac
-
-# dh_installdeb will replace this with shell code automatically
-# generated by other debhelper scripts.
-
-#DEBHELPER#
-
-exit 0
-
-
