@@ -87,7 +87,7 @@ override_dh_auto_install:
 	cd mythplugins && ./configure $(MYTHPLUGINS_CONFIGURE_OPTS) --mythroot=$(CURDIR)/debian/tmp
 	$(MAKE) -j$(PROCESSORS) -C mythplugins
 	for plugin in mytharchive \
-	mythgallery mythgame mythmusic mythmovies mythnews mythvideo \
+	mythgallery mythgame mythmusic mythmovies mythnews\
 	mythweather mythzoneminder mythbrowser mythnetvision ; do \
 		$(MAKE) -C mythplugins/$$plugin install INSTALL_ROOT=$(CURDIR)/debian/$$plugin; \
 	done
