@@ -20,6 +20,7 @@ mythtv (2:0.25.0~master.20110103.86ab1b2-0ubuntu1) UNRELEASED; urgency=low
   * Install new backend configuration content with mythbackend.
   * Add build-deps on python-urlgrabber.
   * Install mythmediaserver into mythtv-common
+  * Drop mythvideo package.  Fully integrated into frontend package now.
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 08 Feb 2011 10:50:52 -0600
 
